--- a/index.css
+++ b/index.css
@@ -74,3 +74,110 @@ body {
     padding-bottom: 15px;
     padding-left: 45px;
 }
+.signup_email.invalid {
+    background-color: hsl(12, 100%, 68%);
+    border: 2px solid red;
+}
+.error-message {
+    color: red;
+    font-size: 14px;
+    display: none;
+    position: relative;
+    bottom: -40px;
+    left: 250px;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    overflow: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 40px;
+    border: 1px solid #888;
+    border-radius: 10px;
+    width: 380px;
+    height: 520px;
+    text-align: left;
+    color: #242742;
+  }
+  .modal_title {
+    font-size: 56px;
+    width: 376px;
+  }
+  .modal_text{
+    font-size: 16px;
+    width: 376px;
+    padding-top: 40px;
+  }
+  
+  .close {
+    cursor: pointer;
+    width: 376px;
+    height: 56px;
+    margin-top: 40px;
+    background-color: #242742;
+    font-weight: 700;
+    font-size: 16px;
+    color: hsl(0, 0%, 100%);
+    border-radius: 8px;
+  }
+  
+  .close:hover {
+    background-color: hsl(4, 100%, 67%);
+    box-shadow: 0px 8px 20px hsl(4, 50%, 67%), 0px 4px 6px hsl(4, 50%, 67%);
+  }
+    @media (max-width: 376px) {
+        body{
+            margin: 0px;
+        }
+        .form{
+            display: flex;
+            flex-direction: column-reverse;
+            border-radius: 0%;
+        }
+        .form_photo{
+            padding: 0px;
+        }
+        .form_info{
+            width: 327px;
+        }
+        .form_info_title{
+            font-size: 34px;
+        }
+        .form_info_text{
+            width: 327px;
+        }
+        .signup{
+            width: 280px;
+        }
+        .signup_button{
+            margin-bottom: 20px;
+        }
+        .error-message{
+            left:150px;
+        }
+        .modal_content{
+            width: 375px;
+        }
+        .modal_title{
+            width: 300px;
+            font-size: 34px;
+        }
+        .modal_text{
+            width: 300px;
+        }
+        .close{
+            width: 300px;
+        }
+    }
